returing list of required labels to parent scope